fix homepage height on mobile

--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -817,7 +817,7 @@ quiet-callout {
   }
 
   #body:has(.splash) {
-    min-height: 0;
+    min-height: 100dvh;
   }
 }
 
